<resources>
    <string name="app_name" translatable="false">CurrentWeatherDataBinding</string>
    <string name="API_KEY" translatable="false">7f379581bcfb1fd5d2bc8a52a8244231</string>
    <string name="simple_weather_app" translatable="false">Simple Weather App</string>

    <string name="search_for_a_city">Search for a city</string>
    <string name="submit">submit</string>
    <string name="none">none</string>
    <string name="back">Back</string>
    <string name="temp">Temp</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_weather" translatable="false">Weather</string>
    <string name="simple_weather" translatable="false">Simple Weather</string>
    <string name="detailed_weather" translatable="false">Detailed Weather</string>

    <string name="alert_dialog_title">Choose weather display mode:</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <string name="en">English</string>
    <string name="ru">Russian</string>
</resources>