<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.currentweatherdatabinding.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_SimpleWeatherFragment"
            app:destination="@id/nav_simple_weather" />
        <action
            android:id="@+id/action_HomeFragment_to_WeatherFragment"
            app:destination="@id/nav_weather" />
    </fragment>

    <fragment
        android:id="@+id/nav_simple_weather"
        android:name="com.example.currentweatherdatabinding.fragments.SimpleWeatherFragment"
        android:label="@string/simple_weather"
        tools:layout="@layout/fragment_simple_weather">
        <argument
            android:name="weatherForecast"
            app:argType="com.example.currentweatherdatabinding.models.WeatherForecast" />
    </fragment>

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.currentweatherdatabinding.fragments.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather">
        <argument
            android:name="weatherForecast"
            app:argType="com.example.currentweatherdatabinding.models.WeatherForecast" />
    </fragment>

</navigation>